<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020.
  ~ JSC
  ~ Design and Programming by Alex Dovby
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sh"
            android:icon="@drawable/ic_menu_smart"
            android:title="@string/menu_smart_home" />
        <item
            android:id="@+id/nav_br"
            android:icon="@drawable/ic_menu_bathroom"
            android:title="@string/menu_bath_room" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_hot_water"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_measurement"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_pref_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>